--- a/ansible/3tiers/main.yml
+++ b/ansible/3tiers/main.yml
@@ -1,3 +1,8 @@
+- hosts: jumpbox
+  gather_facts: false
+  roles:
+    - {name: osp-facts, when: ansible_product_name ==  'OpenStack Compute'}
+
 - name: setup LB tier
   hosts: frontends
   become: yes
