--- a/ansible/3tiers/main.yml
+++ b/ansible/3tiers/main.yml
@@ -1,25 +1,34 @@
+---
+
 - hosts: jumpbox
   gather_facts: false
   roles:
     - {name: osp-facts, when: ansible_product_name ==  'OpenStack Compute'}
+# Setup front-end load balancer tier
 
-- name: setup LB tier
+
+- name: setup load-balancer tier
   hosts: frontends
   become: yes
   roles:
-    - base-config
-    - lb-tier
-  
+    - {name: base-config, tags: base-config}
+    - {name: lb-tier, tags: [lbs, haproxy]}
+
+# Setup application servers tier
+
 - name: setup app tier
   hosts: apps
   become: yes
+  gather_facts: false
   roles:
-    - base-config
-    - app-tier
+    - {name: base-config, tags: base-config}
+    - {name: app-tier, tags: [apps, tomcat]}
 
-- name: setup postgresql
-  hosts: appdbs
+# Setup database tier
+
+- name: setup database tier
   become: yes
+  hosts: appdbs
   roles:
-    - base-config
-    - geerlingguy.postgresql
+    - {name: base-config, tags: base-config}
+    - {name: geerlingguy.postgresql, tags: [dbs, postgres]}
