--- a/ansible/3tiers/ansible.cfg
+++ b/ansible/3tiers/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory=./osp_jumpbox_inventory
-#inventory=./hosts
+timeout=180
 
 #[privilege_escalation]
 #become=True
@@ -9,4 +9,3 @@ inventory=./osp_jumpbox_inventory
 [ssh_connection]
 ssh_args=" -F ./ssh.cfg -o ControlMaster=auto -o ControlPersist=180s"
 host_key_checking=False
-
