--- a/ansible/3tiers/roles/base-config/tasks/main.yml
+++ b/ansible/3tiers/roles/base-config/tasks/main.yml
@@ -1,13 +1,28 @@
-- name: setup yum repos
+---
+# Initial, common, system setup steps
+
+- name: enable sudo without tty for some ansible commands
+  replace:
+    path: /etc/sudoers
+    regexp: '^Defaults\s*requiretty'
+    replace: 'Defaults  !requiretty'
+    backup: yes
+
+- name: enable repos
   template:
     src: repos_template.j2
     dest: /etc/yum.repos.d/open_three-tier-app.repo
     mode: 0644
 
+#- name: setup hostname
+#  hostname:
+#    name: "{{ inventory_hostname }}"
+ 
 - name: install base tools and packages
   yum:
-    name: "{{ item }}"
+    name: "{{ item }}" 
     state: latest
   with_items:
     - httpie
     - python-pip
+
