--- a/ansible/3tiers/main.yml
+++ b/ansible/3tiers/main.yml
@@ -3,7 +3,7 @@
 - hosts: jumpbox
   gather_facts: false
   roles:
-    - {name: osp-facts, when: ansible_product_name ==  'OpenStack Compute'}
+    - {name: osp-facts }
 # Setup front-end load balancer tier
 
 
