--- a/ansible/3tiers/Configure_3TA_OSP.yml
+++ b/ansible/3tiers/Configure_3TA_OSP.yml
@@ -3,7 +3,7 @@
 - hosts: jumpbox
   gather_facts: false
   roles:
-    - {name: osp-facts }
+    - {name: osp-facts, when: ansible_product_name ==  'OpenStack Compute' }
 # Setup front-end load balancer tier
 
 
