--- a/ansible/aws/provision_AWS.yml
+++ b/ansible/aws/provision_AWS.yml
@@ -6,12 +6,12 @@
 #  tags:
 #    - osp.facts
 
-- name: Setup RedHat Repositories
-  hosts: all
-  roles:
-   - { role: ../3tiers/roles/repo-config }
-  tags:
-    - setup-repos
+#- name: Setup RedHat Repositories
+#  hosts: all
+#  roles:
+#   - { role: ../3tiers/roles/repo-config }
+#  tags:
+#    - setup-repos
 
 - name: Setup HAProxy
   hosts: frontends
